--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
     "next": "15.3.2",
@@ -18,7 +19,9 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "glob": "^11.0.2",
     "postcss": "^8.4.31",
+    "sharp": "^0.34.2",
     "tailwindcss": "^3.3.5"
   }
 }
