--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.28.0",
+    "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "glob": "^11.0.2",
-    "postcss": "^8.5.4",
-    "sharp": "^0.34.2",
-    "tailwindcss": "^3.4.17"
+    "sharp": "^0.34.2"
   }
 }
