--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "i18next": "^25.6.0",
     "next": "15.3.2",
+    "next-i18next": "^15.4.2",
+    "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4"
+    "react-i18next": "^16.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
