--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
     "start": "next start",
     "lint": "next lint",
     "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
+    "@tinacms/cli": "^1.11.0",
     "autoprefixer": "^10.4.21",
     "i18next": "^25.6.0",
     "next": "15.3.2",
@@ -18,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^16.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tinacms": "^2.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
