--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^16.0.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^3.4.17",
     "tinacms": "^2.9.0"
   },
