--- a/netlify.toml
+++ b/netlify.toml
@@ -20,6 +20,11 @@
   status = 200
 
 [[redirects]]
+  from = "/*/contact"
+  to = "/contact"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/404.html"
   status = 404
